# fastapi_rag_inngest

./: .env  README.MD  data_loader.py  main.py  pyproject.toml  vector_db.py
custom_types/: __init__.py  custom_types.py
qdrant_storage/: docker-compose.yml  raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/0bca3ad1-9f95-4662-98da-c46054a8510f/: mutable_id_tracker.mappings  segment.json
services/: DB.py
